--- a/src/App.css
+++ b/src/App.css
@@ -211,19 +211,25 @@ body {
 
 .services-section {
   width: 100%;
-  margin: auto;
-  padding: 50px 0 0px 0;
+  padding: 80px 50px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;  /* LEFT | RIGHT */
   align-items: flex-start;
+  gap: 80px;
 }
 
 /* Wrapper that stacks title + button vertically */
 .services-header {
   display: flex;
   flex-direction: column;
-  align-items: flex-start; /* left align */
-  gap: 15px;
+  align-items: flex-start;
+  gap: 40px;
+  padding-left: 10%;
+}
+
+.services-header .section-title {
+  margin-bottom: 10px;
+  text-align: left; /* LEFT aligned */
 }
 
 .services-btn {
@@ -245,20 +251,19 @@ body {
 }
 
 .services-list {
-  margin-top: 20px; 
-  padding-left: 0; 
-} 
-.services-list li { 
-  margin-bottom: 25px; 
-  padding-bottom: 15px; 
-} 
-.services-list h4 { 
-  margin-bottom: 6px; 
-  font-size: 25px; 
-  color: #ffffff; 
-  /* header color */ 
-  font-weight: 600; 
-  font-family: 'Courier New', Courier, monospace; 
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.services-list li {
+  margin-bottom: 30px;
+}
+
+.services-list h4 {
+  font-size: 24px;
+  margin-bottom: 5px;
+  color: #ffffff;
 }
 
 /* FOOTER --------------------------------------------------------------- */
